--- a/potatohead.html
+++ b/potatohead.html
@@ -15,11 +15,11 @@
 			<img id="body" src="assets/body.png">
 			<img id="arms_image" src="assets/arms.png">
 			<img id="ears_image" src="assets/ears.png">
-			<img id="eyes_image" >
+			<img id="eyes_image" src="assets/eyes.png">
 			<img id="mouth_image" >
 			<img id="nose_image" >
 			<img id="eyebrows_image" src="assets/eyebrows.png" >
-			<img id="glasses_image" >
+			<img id="glasses_image" src="assets/glasses.png" >
 			<img id="hat_image" >
 			<img id="moustache_image" >
 			<img id="shoes_image" >
