--- a/potatohead.html
+++ b/potatohead.html
@@ -23,7 +23,7 @@
 			<img id="stunner_shades_image">
 			<img id="hat_image">
 			<img id="baseball_cap_image">
-			<img id="moustache_image">
+			<img id="moustache_image" src="assets/moustache.png">
 			<img id="shoes_image">
 			<img id="cane_image">
 			<img id="earring_left_image">
