--- a/potatohead.html
+++ b/potatohead.html
@@ -13,9 +13,9 @@
 
 		<div id="potato">
 			<img id="body" src="assets/body.png">
-			<img id="arms_image">
-			<img id="ears_image">
-			<img id="eyes_image" >
+			<img id="arms_image" >
+			<img id="ears_image"  >
+			<img id="eyes_image"  >
 			<img id="mouth_image" >
 			<img id="nose_image" >
 			<img id="eyebrows_image" >
@@ -25,7 +25,7 @@
 			<img id="shoes_image" >
 			<img id="cane">
 			<img id="earrings">
-			<img id="hatflower">
+			<img id="hatflower" src="https://ae01.alicdn.com/kf/HTB1RrUSOVXXXXafaXXXq6xXFXXXO/Hot-Selling-Colorful-Diy-Artificial-font-b-Flowers-b-font-Peony-font-b-Silk-b-font.jpg">
 			<img id="boosters">
 		</div>
 
