--- a/potatohead.html
+++ b/potatohead.html
@@ -6,6 +6,7 @@
 		<link href="potato.css" type="text/css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="script.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Sansita+One" rel="stylesheet">
 	</head>
 
 	<body>
