--- a/potatohead.html
+++ b/potatohead.html
@@ -13,8 +13,8 @@
 
 		<div id="potato">
 			<img id="body" src="assets/body.png">
-			<img id="arms_image">
-			<img id="ears_image">
+			<img id="arms_image" >
+			<img id="ears_image" >
 			<img id="eyes_image" >
 			<img id="mouth_image" >
 			<img id="nose_image" >
@@ -22,7 +22,7 @@
 			<img id="glasses_image" >
 			<img id="hat_image" >
 			<img id="moustache_image" >
-			<img id="shoes_image" >
+			<img id="shoes_image" src="assets/shoes.png">
 			<img id="cane">
 			<img id="earrings">
 			<img id="hatflower">
